# idasen-tui

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/app/: actions.rs  app.rs  config.rs  mod.rs  state.rs  ui_event_emitter.rs
src/app/jobs/: background_job.rs  mod.rs  movement_job.rs  notification_job.rs
src/app/views/: mod.rs
src/app/views/connections/: view.rs
src/app/views/devices/: view.rs
src/app/views/movement/: view.rs
src/app/views/positions/: view.rs
src/bluetooth/: ble_device.rs  manager.rs  mod.rs
src/idasen/: idasen.rs  mod.rs
src/tui/: centered_rect.rs  help_bar.rs  list.rs  mod.rs  notification_list.rs
