[package]
name = "idasen-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
thiserror = "1.0.56"
uuid = "1.7.0"
dirs = "5.0"

btleplug = { version = "0.10", features = ["serde"] }

crossterm = "0.27.0"
ratatui = "0.25.0"
tui-big-text = "0.4.2"
